# objects_visualization_ros2

./: .gitignore  README.md
image_vis/: CMakeLists.txt  package.xml
image_vis/install/: local_setup.sh  setup.sh
image_vis/install/image_vis/lib/image_vis/: image_viewer_node
image_vis/install/image_vis/share/image_vis/: local_setup.sh  package.ps1  package.sh  package.xml  package.zsh
image_vis/launch/: test_draw_objects.launch.xml
image_vis/log/: latest_build
image_vis/scripts/: draw_objects3d.py  publish_random_objects.py  utils.py
image_vis/src/: draw_objects.cpp  draw_objects3d.cpp  geometry.cpp  utils.cpp  utils.hpp
install/: local_setup.sh  setup.sh
install/image_vis/share/image_vis/: package.bash  package.dsv  package.sh
install/objects_msgs/include/objects_msgs/msg/: dynamic_object.h  dynamic_object_array.hpp  object.hpp  object2_d.h  object2_d.hpp  object2_d_array.hpp  object_array.h  object_array.hpp  rosidl_typesupport_introspection_c__visibility_control.h
install/objects_msgs/include/objects_msgs/msg/detail/: dynamic_object__functions.h  dynamic_object__rosidl_typesupport_fastrtps_c.h  dynamic_object__rosidl_typesupport_fastrtps_cpp.hpp  dynamic_object__rosidl_typesupport_introspection_c.h  dynamic_object__type_support.cpp  dynamic_object__type_support.h  dynamic_object_array__functions.h  dynamic_object_array__rosidl_typesupport_fastrtps_c.h  dynamic_object_array__rosidl_typesupport_fastrtps_cpp.hpp  dynamic_object_array__rosidl_typesupport_introspection_cpp.hpp  dynamic_object_array__traits.hpp  dynamic_object_array__type_support.c  dynamic_object_array__type_support.h  object2_d__builder.hpp  object2_d__functions.c  object2_d__functions.h  object2_d__struct.h  object2_d__traits.hpp  object2_d_array__rosidl_typesupport_fastrtps_c.h  object2_d_array__traits.hpp  object2_d_array__type_support.cpp  object__builder.hpp  object__rosidl_typesupport_fastrtps_c.h  object__rosidl_typesupport_fastrtps_cpp.hpp  object__rosidl_typesupport_introspection_cpp.hpp  object__type_support.cpp  object_array__functions.h  object_array__rosidl_typesupport_introspection_cpp.hpp  object_array__type_support.cpp  object_label__builder.hpp  object_label__functions.c  object_label__functions.h  object_label__rosidl_typesupport_fastrtps_c.h  object_label__struct.hpp  object_label__type_support.c  object_label__type_support.cpp
install/objects_msgs/share/ament_index/resource_index/package_run_dependencies/: objects_msgs
install/objects_msgs/share/ament_index/resource_index/rosidl_interfaces/: objects_msgs
install/objects_msgs/share/objects_msgs/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/objects_msgs/share/objects_msgs/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_targets-extras.cmake  objects_msgsConfig.cmake  objects_msgs__rosidl_generator_cExport-noconfig.cmake  objects_msgs__rosidl_generator_cppExport.cmake  objects_msgs__rosidl_typesupport_cppExport-noconfig.cmake  objects_msgs__rosidl_typesupport_cppExport.cmake  objects_msgs__rosidl_typesupport_introspection_cppExport-noconfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
install/objects_msgs/share/objects_msgs/msg/: DynamicObject.idl  Object.idl  ObjectArray.idl
log/: latest_build
objects_msgs/: CMakeLists.txt
objects_msgs/msg/: DynamicObject.msg  Object2D.msg  Object2D3D.msg  Object2D3DArray.msg
objects_vis/: CMakeLists.txt  package.xml
objects_vis/config/: random_objects.rviz
objects_vis/include/: draw_centerpoint.hpp  draw_objects.hpp  draw_objects3d.hpp  objects2markers.hpp  utils.hpp
objects_vis/include/objects_vis/: draw_objects3d_node.hpp  draw_objects_node.hpp  dynamic_objects2markers_node.hpp  objects2markers_node.hpp  utils.h  utils.hpp
objects_vis/launch/: test_draw_objects.launch.xml  visualization.launch.py
objects_vis/src/: draw_centerpoint.cpp  draw_objects.cpp  draw_objects3d.cpp  draw_objects3d_exec.cpp  draw_objects3d_node.cpp  draw_objects_exec.cpp  draw_objects_node.cpp  dynamic_objects2markers_exec.cpp  dynamic_objects2markers_node.cpp  objects2markers.cpp  objects2markers_exec.cpp  objects2markers_node.cpp  utils.cpp
objects_vis/test/: publish_random_objects.cpp
